--- a/phase-0-html-document-structure-lab/index.html
+++ b/phase-0-html-document-structure-lab/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="eng">
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <title>African Countries!</title>
+        
+    </head>
+
+    <body>
+    <h1>countries in Africa</h1>
+        <p>These are some countries in Africa</p>
+
+    <ul>
+        <li>"Zambia"</li>
+        <li>"Kenya"</li>
+        <li>"Tanzania"</li>
+        <li>"Uganda"</li>
+        <li>"Somalia"</li>
+    </ul>
+
+    </body>
+</html>
 <!-- Your code here -->
